--- a/index.html
+++ b/index.html
@@ -234,8 +234,8 @@
     </header>
 
     <section class="relative min-h-screen flex items-center justify-center pt-20 overflow-hidden text-center bg-black">
-        <div class="absolute inset-0 z-0"><img src="public/hero_bg_new.jpg" alt="Background"
-                class="w-full h-full object-contain object-center opacity-80"></div>
+        <div class="absolute inset-0 z-0"><img src="public/hero_bg_final.jpg" alt="Background"
+                class="w-full h-full object-cover object-center opacity-80"></div>
         <div class="absolute inset-0 bg-[#0A192F]/80 mix-blend-hard-light"></div>
         <div class="container mx-auto px-6 relative z-10">
             <div class="inline-block px-4 py-1.5 rounded-full border border-cyan-500/30 bg-cyan-500/10 text-cyan-400 text-sm font-medium mb-6 backdrop-blur-sm"
