--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
     </header>
 
     <section class="relative min-h-screen flex items-center justify-center pt-20 overflow-hidden text-center bg-black">
-        <div class="absolute inset-0 z-0"><img src="public/hero_bg_final.jpg" alt="Background"
+        <div class="absolute inset-0 z-0"><img src="hero_bg_final.jpg" alt="Background"
                 class="w-full h-full object-cover object-center opacity-80"></div>
         <div class="absolute inset-0 bg-[#0A192F]/80 mix-blend-hard-light"></div>
         <div class="container mx-auto px-6 relative z-10">
