--- a/index.html
+++ b/index.html
@@ -185,6 +185,13 @@
                         <a href="#manpower"
                             class="block px-8 py-4 text-[12px] leading-relaxed text-slate-300 hover:bg-white/5 hover:text-cyan-400 transition-colors border-b border-white/5"
                             data-i18n="nav_manpower">HR & Manpower</a>
+
+                        <a href="japan-candidates.html"
+                            class="block pl-12 pr-8 py-3 text-[11px] leading-relaxed text-slate-400 hover:bg-white/5 hover:text-cyan-400 transition-colors border-b border-white/5 flex items-center"
+                            data-i18n="nav_japan">
+                            <span class="w-1.5 h-1.5 rounded-full bg-cyan-500/50 mr-2"></span>
+                            Japan Talent Pool
+                        </a>
                         <a href="#travel"
                             class="block px-8 py-4 text-[12px] leading-relaxed text-slate-300 hover:bg-white/5 hover:text-cyan-400 transition-colors"
                             data-i18n="nav_travel">Travel & Logistics</a>
@@ -222,6 +229,8 @@
                         data-i18n="nav_study">Global Education</a>
                     <a href="#manpower" class="block text-slate-300 hover:text-cyan-400 py-3 pl-4"
                         data-i18n="nav_manpower">HR & Manpower</a>
+                    <a href="japan-candidates.html" class="block text-slate-300 hover:text-cyan-400 py-3 pl-4"
+                        data-i18n="nav_japan">Japan Talent Pool</a>
                     <a href="#travel" class="block text-slate-300 hover:text-cyan-400 py-3 pl-4"
                         data-i18n="nav_travel">Travel & Logistics</a>
                 </div>
@@ -234,7 +243,7 @@
     </header>
 
     <section class="relative min-h-screen flex items-center justify-center pt-20 overflow-hidden text-center bg-black">
-        <div class="absolute inset-0 z-0"><img src="hero_bg_final.jpg" alt="Background"
+        <div class="absolute inset-0 z-0"><img src="hero_bg.png" alt="Background"
                 class="w-full h-full object-cover object-center opacity-80"></div>
         <div class="absolute inset-0 bg-[#0A192F]/80 mix-blend-hard-light"></div>
         <div class="container mx-auto px-6 relative z-10">
@@ -639,6 +648,18 @@
                 <h2 class="text-3xl md:text-5xl font-bold mt-2 text-white" data-i18n="man_title">Premium Indonesian
                     Talent Solution</h2>
                 <div class="w-20 h-1 bg-cyan-500 mx-auto mt-6 rounded-full"></div>
+                <div class="mt-8">
+                    <a href="japan-candidates.html"
+                        class="inline-flex items-center px-6 py-3 border border-cyan-500 text-cyan-400 font-bold rounded-lg hover:bg-cyan-500 hover:text-white transition-colors">
+                        <span data-i18n="btn_check_japan">Check Japan Manpower</span>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 ml-2" viewBox="0 0 20 20"
+                            fill="currentColor">
+                            <path fill-rule="evenodd"
+                                d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z"
+                                clip-rule="evenodd" />
+                        </svg>
+                    </a>
+                </div>
             </div>
 
             <div class="grid grid-cols-1 lg:grid-cols-3 gap-8 mb-16">
@@ -892,6 +913,8 @@
                     nav_education: "AI Education",
                     nav_study: "Global Education",
                     nav_manpower: "HR & Manpower",
+                    nav_japan: "Japan Talent Pool",
+                    btn_check_japan: "Check Japan Manpower →",
                     nav_travel: "Travel & Logistics",
 
                     hero_badge: "Official Launch: Premier AI Solutions",
@@ -1001,6 +1024,8 @@
                     nav_education: "AI 교육",
                     nav_study: "유학 & 캠프 투어",
                     nav_manpower: "인력 공급 & 매칭",
+                    nav_japan: "일본 인력 확인하기",
+                    btn_check_japan: "일본 인력 확인하기 →",
                     nav_travel: "맞춤 여행 & 비즈니스 시찰",
 
                     hero_badge: "2026 GLOBAL VISION",
