--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
     </section>
 
     <!-- Restored Missing Sections -->
-    <section id="ceo-profile" class="py-24 bg-[#0B1221] relative border-b border-white/5">
+    <section id="ceo-profile" class="hidden py-24 bg-[#0B1221] relative border-b border-white/5">
         <div class="container mx-auto px-6">
             <div class="flex flex-col md:flex-row items-center gap-12">
                 <div class="md:w-1/3 w-full">
@@ -1155,6 +1155,29 @@
             // Initialize with Korean language
             document.addEventListener('DOMContentLoaded', () => {
                 changeLanguage('kr');
+
+                // CEO Profile Visibility Logic
+                const showCeoProfile = () => {
+                    const profile = document.getElementById('ceo-profile');
+                    if (profile) {
+                        profile.classList.remove('hidden');
+                        // Scroll to it nicely if needed, though default anchor behavior handles it usually.
+                        // However, since it was hidden, the browser might not calculate position correctly *before* the click.
+                        // So we remove hidden, then let the event proceed.
+                    }
+                };
+
+                // Check hash on load
+                if (window.location.hash === '#ceo-profile') {
+                    showCeoProfile();
+                }
+
+                // Attach to links
+                document.querySelectorAll('a[href="#ceo-profile"]').forEach(link => {
+                    link.addEventListener('click', () => {
+                        showCeoProfile();
+                    });
+                });
             });
 
             const menuBtn = document.getElementById('mobile-menu-btn');
