--- a/japan-candidates.html
+++ b/japan-candidates.html
@@ -27,6 +27,7 @@
             box-shadow: inset 0 0 150px rgba(6, 182, 212, 0.4);
             min-height: 100vh;
             margin: 0;
+            overflow-x: hidden;
         }
 
         .text-gradient {
