--- a/japan-candidates.html
+++ b/japan-candidates.html
@@ -196,7 +196,7 @@
     <!-- Hero Section -->
     <section class="relative h-[60vh] flex items-center justify-center pt-20 overflow-hidden text-center bg-black">
         <div class="absolute inset-0 z-0">
-            <img src="visual_network.jpg" alt="Japan Manpower"
+            <img src="japan_hero_new.png" alt="Japan Manpower"
                 class="w-full h-full object-cover object-center opacity-80">
         </div>
         <div class="absolute inset-0 bg-[#0A192F]/60 mix-blend-multiply"></div>
